# farm-watch

./: README.md
backend/: .gitignore  Dockerfile  Procfile  README.md  entrypoint.sh  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  runtime.txt
backend/.devcontainer/: devcontainer.json
backend/.do/: app.yaml
backend/Docker/: Dockerfile  entrypoint.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 74e9350f78b7_altercolumn.py  83f43149ebfa_.py
backend/auth/: models.py  openstreetmap.py  routers.py
backend/common/: database.py  models.py  responses.py  routers.py
backend/data-manager/: services.py  utils.py
backend/datamanager/: models.py  routers.py  utils.py
backend/datamanager/testdata/: farm.geojson  farm.kml  farm.topojson
backend/fields/: models.py  routers.py  schemas.py  utils.py
backend/imagerysearch/: routers.py
backend/src/: .env  main.py
backend/src/common/: models.py
backend/src/data-manager/: selectors.py
backend/src/fields/: routers.py
backend/users/: models.py  schemas.py  selectors.py  services.py
frontend/: .env  .gitignore  README.md  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  types.ts
frontend/src/components/: EmptyState.tsx  Layout.tsx
frontend/src/context/: AuthContext.tsx  AuthProvider.tsx  DataManagerContext.jsx  DataManagerProvider.tsx  MapContext.jsx  SessionContext.tsx  StateManager.jsx  StateManager.tsx
frontend/src/hooks/: useRouter.tsx
frontend/src/pages/: 404.tsx  Home.tsx
(+55 files in other folders)
